# FreeTakServer

./: .gitignore  README_DOCKER.md  pyproject.toml
.github/workflows/: Upload-Python-Package-To-Dev.yml  codeql.yml  containerize-on-tag.yml  docker.yml  pub-server-rebuild.yml  publish-python-package.yml  python-dev-publish.yml  python-test.yml  simple_dev_upload.yml  wemake.yml
FreeTAKServer/core/configuration/: MainConfig.py
