[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "FreeTAKServer"
version = "2.2.1"
description = "An open source server for the TAK family of applications."
license = "EPL-2.0"
authors = ["FreeTAKTeam <FreeTakTeam@gmail.com>"]
maintainers = ["FreeTAKTeam <FreeTakTeam@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/FreeTAKTeam/FreeTakServer"
repository = "https://github.com/FreeTAKTeam/FreeTakServer"
keywords = ["TAK", "OPENSOURCE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"

packages = [
    {include = "FreeTAKServer"}
]
include = [
    "README.md",
    "FreeTAKServer/**/*.json", 
    "FreeTAKServer/**/*.py", 
    "FreeTAKServer/**/*.ini", 
    "FreeTAKServer/**/*.conf"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
bitarray="*"
click=">=8.1.7"
colorama="0.4.6"
cryptography="36.0.2"
bcrypt="3.1.7"
defusedxml="0.7.1"
dnspython="2.2.1"
eventlet="0.36.1"
Flask="3.0.2"
Flask-Cors="4.0.0"
Flask-HTTPAuth="4.8.0"
Flask-Login="0.6.3"
Flask-SocketIO="5.3.6"
Flask-SQLAlchemy="3.1.1"
geographiclib="1.52"
geopy="2.2.0"
greenlet="3.0.3"
itsdangerous=">=2.1.2"
testresources="2.0.1"
Jinja2="3.1.3"
lxml="*"
MarkupSafe="2.1.5"
monotonic="1.6"
pathlib2="2.3.7.post1"
protobuf="3.18.3"
psutil="5.9.4"
pykml="0.2.0"
python-engineio="4.9.0"
python-socketio="5.11.1"
PyYAML="6.0.1"
"ruamel.yaml"="0.17.21"
"ruamel.yaml.clib"="0.2.8"
six="1.16.0"
SQLAlchemy="2.0.29"
tabulate="0.8.7"
Werkzeug="3.0.1"
WTForms="2.3.3"
pyOpenSSL="22.0.0"
qrcode="7.3.1"
pillow="9.3.0"
asyncio="3.4.3"
xmltodict="*"
pyzmq="*"
digitalpy=">=0.3.13.7"
opentelemetry-sdk="*"
PyJWT="*"

[tool.poetry.group.dev.dependencies]
pytak = {version = "5.4.1"}
pytest = {version = "7.2.0"}
pytest-asyncio = {version = "0.20.1"}

[tool.poetry.group.ui.dependencies]
FreeTAKServer_UI = {version = "2.2.1"}

[tool.poetry.scripts]
fts_server = "FreeTAKServer.controllers.services.FTS:main"
