[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "FreeTAKServer"
version = "2.2.2"
description = "An open source server for the TAK family of applications."
license = "EPL-2.0"
authors = ["FreeTAKTeam <FreeTakTeam@gmail.com>"]
maintainers = ["FreeTAKTeam <FreeTakTeam@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/FreeTAKTeam/FreeTakServer"
repository = "https://github.com/FreeTAKTeam/FreeTakServer"
keywords = ["TAK", "OPENSOURCE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"

packages = [
    {include = "FreeTAKServer"}
]
include = [
    "README.md",
    "FreeTAKServer/**/*.json", 
    "FreeTAKServer/**/*.py", 
    "FreeTAKServer/**/*.ini", 
    "FreeTAKServer/**/*.conf"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
asyncio = ">=3.4.3,<4.0"
bcrypt = ">=3.1.7,<5.0"
bitarray = ">=3.4.0,<4.0"
click = ">=8.1.7,<9.0"
colorama = ">=0.4.6,<0.5"
cryptography = ">=36.0.2,<50.0"
defusedxml = ">=0.7.1,<0.8"
digitalpy = ">=0.3.13.7,<0.4"
dnspython = ">=2.2.1,<3.0"
eventlet = ">=0.36.1,<0.40"
flask = ">=3.0.2,<3.1"
flask-Cors = ">=4.0.0,<5.0"
flask-HTTPAuth = ">=4.8.0,<5.0"
flask-Login = ">=0.6.3,<0.7"
flask-SocketIO = ">=5.3.6,5.4"
flask-SQLAlchemy = ">=3.1.1,<3.2"
geographiclib = ">=1.52,<1.53"
geopy = ">=2.2.0,<3.0"
greenlet = ">=3.2.2,<4.0"
itsdangerous = ">=2.1.2"
Jinja2 = ">=3.1.3,<3.2"
lxml = ">=5.4.0,<6.0"
MarkupSafe = ">=2.1.5,<2.2"
monotonic = ">=1.6,<2.0"
opentelemetry-sdk = ">=1.33.0,<1.34"
packaging = ">=25.0,<26.0"
pathlib2 = ">=2.3.7.post1,<2.4"
pillow = ">=10.0.0,<12.0"
protobuf = ">=3.18.3,<3.19"
psutil = ">=5.9.0,<6.0"
PyJWT = ">=2.10.0,<2.11"
pykml = ">=0.2.0,<0.3"
pyOpenSSL = ">=22.0.0,<23.0"
python-engineio = ">=4.9.0,<5.0"
python-socketio = ">=5.11.0,<5.12"
PyYAML = ">=6.0.1,<7.0"
pyzmq = ">=26.4.0,<27.0"
qrcode = ">=8.2,<9.0"
"ruamel.yaml.clib" = ">=0.2.7,<0.3"
"ruamel.yaml" = ">=0.17.21,<0.19"
six = ">=1.16.0,<1.17"
SQLAlchemy = ">=2.0.40,<3.0"
tabulate = ">=0.8.7,<0.9"
testresources = ">=2.0.1,<3.0"
Werkzeug = ">=3.0.1,<4.0"
WTForms = ">=2.3.3,<2.4"
xmltodict = ">=0.14.0,<0.15"

[tool.poetry.group.dev.dependencies]
pytak = {version = "5.4.1"}
pytest = {version = "7.2.0"}
pytest-asyncio = {version = "0.20.1"}

[tool.poetry.group.ui.dependencies]
FreeTAKServer_UI = {version = "2.2.2"}

[tool.poetry.scripts]
fts_server = "FreeTAKServer.controllers.services.FTS:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
name = "fts"
platforms = ["linux-64"]

[tool.pixi.dependencies]
pip = ">=25.0,<26.0"

[tool.pixi.tasks.install]
cmd = ["pip", "install", "."]


